Added a website to get back to the website

--- a/Projects/Calculator/index.html
+++ b/Projects/Calculator/index.html
@@ -21,6 +21,10 @@
   <body>
     <div id="resultArea"></div>
 
+    <div id="website-button">
+      <a href="/index.html">Zurück zur Website</a>
+    </div>
+
     <table>
       <tr>
         <td></td>
