--- a/Projects/CurrencyConverter/index.html
+++ b/Projects/CurrencyConverter/index.html
@@ -48,5 +48,8 @@
         <button onclick="calcDollarToEuro()">Berechne USD in EURO</button>
       </div>
     </div>
+    <div id="website-button">
+      <a href="/index.html">Zurück zur Website</a>
+    </div>
   </body>
 </html>
