--- a/Projects/HotelReservation/HotelReservation.html
+++ b/Projects/HotelReservation/HotelReservation.html
@@ -100,6 +100,10 @@
       <div id="idAusgabe"></div>
     </div>
 
+    <div id="website-button">
+      <a href="/index.html">Zurück zur Website</a>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
