--- a/Projects/InterestCalculator/Zinseszins.html
+++ b/Projects/InterestCalculator/Zinseszins.html
@@ -42,6 +42,10 @@
       </div>
     </main>
 
+    <div id="website-button">
+      <a href="/index.html">Zurück zur Website</a>
+    </div>
+
     <script src="./main.js"></script>
   </body>
 </html>
