--- a/Projects/PhoneCostComparision/index.html
+++ b/Projects/PhoneCostComparision/index.html
@@ -45,5 +45,8 @@
         <div id="idAusgabe2"></div>
       </div>
     </main>
+    <div id="website-button">
+      <a href="/index.html">Zurück zur Website</a>
+    </div>
   </body>
 </html>
