--- a/Projects/PrintingCostComparision/index.html
+++ b/Projects/PrintingCostComparision/index.html
@@ -42,6 +42,10 @@
         <div id="outputResult"></div>
         <div id="kritischeMenge"></div>
       </div>
+
+      <div id="website-button">
+        <a href="/index.html">Zurück zur Website</a>
+      </div>
     </main>
     <script src="main.js"></script>
   </body>
