--- a/Projects/ShoppingList/index.html
+++ b/Projects/ShoppingList/index.html
@@ -14,6 +14,9 @@
   </head>
   <body>
     <main id="shoppingProduct">
+      <div id="website-button">
+        <a href="/index.html">Zurück zur Website</a>
+      </div>  
       <form action="/nowhere">
         <label for="product">Welches Produkt?</label>
         <input
