--- a/Projects/TeslaWebsite/TeslaHomepage/homepage.html
+++ b/Projects/TeslaWebsite/TeslaHomepage/homepage.html
@@ -16,6 +16,9 @@
             src="./image/Tesla-homepage.jpg"
             alt=""
           />
+          <div id="website-button">
+            <a href="/index.html">Zurück zur Website</a>
+          </div>
         </div>
 
         <div class="topBar">
