--- a/Projects/RandomColor/index.html
+++ b/Projects/RandomColor/index.html
@@ -14,6 +14,10 @@
       </div>
     </main>
 
+    <div id="website-button">
+      <a href="/index.html">Zurück zur Website</a>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
