--- a/Projects/ScoreKeeper/index.html
+++ b/Projects/ScoreKeeper/index.html
@@ -21,8 +21,8 @@
         style="width: 28rem"
       >
         <img
-          src="/images/projectIMG/score-keeper.png"
-          class="card-img-top"
+          src="/Projects/ScoreKeeper/gameIMG.png"
+          class="card-img-top object-fit-fill"
           alt="IMG"
         />
         <div class="card-body">
@@ -49,7 +49,7 @@
           <button class="btn bg-success text-light" id="playerOne">
             +1 Player One
           </button>
-          <button class="btn bg-sDrucker 1ndary text-light" id="reset">
+          <button class="btn bg-secondary text-light px-5" id="reset">
             Reset
           </button>
           <button class="btn bg-danger text-light" id="playerTwo">
@@ -58,6 +58,9 @@
         </div>
       </div>
     </main>
+    <div id="website-button">
+      <a href="/index.html">Zurück zur Website</a>
+    </div>
 
     <script src="app.js"></script>
     <script
