changed github link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <li>
                     <a
                       class="nav-link dropdown-item fw-bold fs-5 d-flex justify-content-center text-light"
-                      href="https://github.com/L0x1100011"
+                      href="https://github.com/latifakan"
                       >GitHub</a
                     >
                   </li>
