Added tradingCalc project

--- a/index.html
+++ b/index.html
@@ -512,21 +512,21 @@
             <div class="card h-100" id="card-color">
               <a href="/Projects/TeslaWebsite/TeslaHomepage/homepage.html">
                 <img
-                  src="/images/projectIMG/tesla-website.png"
+                  src="/images/projectIMG/crypto-setup.png"
                   class="card-img-top"
+                  style="height: 350px;"
                   alt="..."
                 />
               </a>
               <div class="card-body">
-                <h5 class="card-title text-center">Tesla Website</h5>
+                <h5 class="card-title text-center">Crypto Setup Rechner</h5>
                 <p class="card-text">
-                  Eine Website zu den Fahrzeugen von Tesla, wo ich die
-                  technische Daten zu den einzelnen Fahrzeugen aufliste.
+                  Um die Gebühren und die Positionsgröße zu berechnen
                 </p>
               </div>
               <div class="bg-secondary rounded">
                 <a
-                  href="/Projects/TeslaWebsite/TeslaHomepage/homepage.html"
+                  href="/Projects/tradingCalc/index.html"
                   class="text-light"
                 >
                   <button
@@ -839,11 +839,45 @@
               </div>
             </div>
           </div>
+          <div class="col">
+            <div class="card h-100" id="card-color">
+              <a href="/Projects/TeslaWebsite/TeslaHomepage/homepage.html">
+                <img
+                  src="/images/projectIMG/tesla-website.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+              </a>
+              <div class="card-body">
+                <h5 class="card-title text-center">Tesla Website</h5>
+                <p class="card-text">
+                  Eine Website zu den Fahrzeugen von Tesla, wo ich die
+                  technische Daten zu den einzelnen Fahrzeugen aufliste.
+                </p>
+              </div>
+              <div class="bg-secondary rounded">
+                <a
+                  href="/Projects/TeslaWebsite/TeslaHomepage/homepage.html"
+                  class="text-light"
+                >
+                  <button
+                    type="button"
+                    class="fw-bold btn btn-primary button-project text-decoration-none w-100"
+                  >
+                    Zum Projekt
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="d-flex justify-content-center align-items-center my-5" id="footer">
+    <div
+      class="d-flex justify-content-center align-items-center my-5"
+      id="footer"
+    >
       <button type="button" class="btn btn-primary">
         <a
           href="#start"
