--- a/index.html
+++ b/index.html
@@ -395,14 +395,14 @@
           class="progress mb-3"
           role="progressbar"
           aria-label="progress"
-          aria-valuenow="55"
+          aria-valuenow="75"
           aria-valuemin="0"
           aria-valuemax="100"
           style="height: 30px"
         >
           <div
             class="progress-bar bg-primary progress-bar-striped progress-bar-animated fs-5 fw-bold letter-spacing-2"
-            style="width: 55%"
+            style="width: 75%"
           >
             JavaScript
           </div>
@@ -436,7 +436,7 @@
             class="progress-bar bg-primary progress-bar-striped progress-bar-animated fs-5 fw-bold letter-spacing-2"
             style="width: 50%"
           >
-            Git
+            Git / GitHub
           </div>
         </div>
         <div
@@ -857,6 +857,36 @@
               <div class="bg-secondary rounded">
                 <a
                   href="/Projects/TeslaWebsite/TeslaHomepage/homepage.html"
+                  class="text-light"
+                >
+                  <button
+                    type="button"
+                    class="fw-bold btn btn-primary button-project text-decoration-none w-100"
+                  >
+                    Zum Projekt
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+                    <div class="col">
+            <div class="card h-100 shadow" id="card-color">
+              <a href="/Projects/2DGames/index.html">
+                <img
+                  src="/images/projectIMG/breaker-game.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+              </a>
+              <div class="card-body">
+                <h5 class="card-title text-center">Breaker Spiel</h5>
+                <p class="card-text">
+                  Ein Klassiker. Spiele es und versetze dich in deine Kindheit zurück.
+                </p>
+              </div>
+              <div class="bg-secondary rounded">
+                <a
+                  href="/Projects/2DGames/index.html"
                   class="text-light"
                 >
                   <button
