--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     >
       <div class="container container-lg px-5">
         <button
-          class="navbar-toggler bg-light"
+          class="navbar-toggler"
           type="button"
+          id="toggle"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
         >
@@ -313,11 +314,7 @@
         <div class="col-lg-6 col-12 lh-sm" id="about-me-section">
           <div id="about-me-text">
             <p>
-              Mein Name ist Mehmed Latif Akan, wobei man mich auch nur Latif
-              nennt.
-            </p>
-            <p>
-              Mit 17 habe ich meinen ersten eigenen Computer aus einzelnen
+              Mit 16 habe ich meinen ersten eigenen Computer aus einzelnen
               Komponenten zusammengestellt und so schon die Erfahrung mit der
               Hardware machen können.
             </p>
@@ -358,7 +355,7 @@
     >
       <h2 class="text-center fw-bold text-light pt-5">TECH STACK / TOOLS</h2>
 
-      <div class="pt-5 d-flex justify-content-center flex-column vh-100 z-2">
+      <div class="d-flex justify-content-center flex-column vh-100 z-2">
         <div
           class="progress mb-3"
           role="progressbar"
@@ -395,14 +392,14 @@
           class="progress mb-3"
           role="progressbar"
           aria-label="progress"
-          aria-valuenow="75"
+          aria-valuenow="80"
           aria-valuemin="0"
           aria-valuemax="100"
           style="height: 30px"
         >
           <div
             class="progress-bar bg-primary progress-bar-striped progress-bar-animated fs-5 fw-bold letter-spacing-2"
-            style="width: 75%"
+            style="width: 80%"
           >
             JavaScript
           </div>
@@ -472,6 +469,41 @@
           </div>
         </div>
       </div>
+      <div>
+        <!-- Certificates -->
+
+        <h2 class="text-center pt-5 fw-bold text-light">CERTIFICATES</h2>
+
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="/images/certificates/JS_fcc.png"
+                class="d-block w-100 pb-5"
+                alt="img"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
     </div>
 
     <!-- My projects -->
@@ -524,10 +556,7 @@
                 </p>
               </div>
               <div class="bg-secondary rounded">
-                <a
-                  href="/Projects/tradingCalc/index.html"
-                  class="text-light"
-                >
+                <a href="/Projects/tradingCalc/index.html" class="text-light">
                   <button
                     type="button"
                     class="fw-bold btn btn-primary button-project text-decoration-none w-100"
@@ -869,7 +898,7 @@
               </div>
             </div>
           </div>
-                    <div class="col">
+          <div class="col">
             <div class="card h-100 shadow" id="card-color">
               <a href="/Projects/2DGames/index.html">
                 <img
@@ -881,14 +910,12 @@
               <div class="card-body">
                 <h5 class="card-title text-center">Breaker Spiel</h5>
                 <p class="card-text">
-                  Ein Klassiker. Spiele es und versetze dich in deine Kindheit zurück.
+                  Ein Klassiker. Spiele es und versetze dich in deine Kindheit
+                  zurück.
                 </p>
               </div>
               <div class="bg-secondary rounded">
-                <a
-                  href="/Projects/2DGames/index.html"
-                  class="text-light"
-                >
+                <a href="/Projects/2DGames/index.html" class="text-light">
                   <button
                     type="button"
                     class="fw-bold btn btn-primary button-project text-decoration-none w-100"
